fix overflow issues with CrewCard
Some issues are only seen on firefox and not on chromium based browsers

--- a/src/components/CrewCard.css
+++ b/src/components/CrewCard.css
@@ -1,5 +1,6 @@
 .crew-card {
-  aspect-ratio: 10/16;
+  min-width: 12rem;
+  max-width: 13rem;
   height: 18rem;
 }
 
@@ -11,5 +12,5 @@
 }
 
 .bw-gradient {
-  background: linear-gradient(360deg, rgb(0, 0, 0) 40%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(360deg, rgb(0, 0, 0) 60%, rgba(255, 255, 255, 0) 100%);
 }
