--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ textarea:focus {
 	scroll-behavior: smooth;
 	display: flex;
 	overflow-x: scroll;
+	overflow-y: hidden;
 	padding-top: 1.25rem;
 	padding-bottom: 1.25rem;
 }
